@@ -8,7 +8,6 @@ import static seedu.address.testutil.Assert.assertThrows;
 
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -54,12 +53,12 @@ public class AddCommandTest {
         // Adding a tutor
         assertEquals(String.format(AddCommand.MESSAGE_SUCCESS_TUTOR, validTutor),
                 commandResultTutor.getFeedbackToUser());
-        assertEquals(Arrays.asList(validTutor), modelStubTutor.tutorsAdded);
+        assertEquals(List.of(validTutor), modelStubTutor.tutorsAdded);
 
         // Adding a student
         assertEquals(String.format(AddCommand.MESSAGE_SUCCESS_STUDENT, validStudent),
                 commandResultStudent.getFeedbackToUser());
-        assertEquals(Arrays.asList(validStudent), modelStubStudent.studentsAdded);
+        assertEquals(List.of(validStudent), modelStubStudent.studentsAdded);
     }
 
     @Test
@@ -112,7 +111,7 @@ public class AddCommandTest {
     }
 
     /**
-     * A default model stub that have all of the methods failing.
+     * A default model stub that has all methods failing.
      */
     private class ModelStub implements Model {
         @Override
